--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "main": "lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Dolov/react-org-chart"
+    "url": "https://github.com/Dolov/rc-org-chart"
   },
-  "homepage": "http://example.shisongyan.top/react-org-chart/",
+  "homepage": "http://example.shisongyan.top/rc-org-chart/",
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
@@ -17,7 +17,8 @@
     "pub": "babel ./src/components -d ./lib --copy-files",
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "pub": "sh ./publish.sh"
   },
   "dependencies": {
     "antd": "^3.15.0",
