--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "files": [
     "lib"
   ],
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
@@ -14,11 +14,10 @@
     "start": "umi dev",
     "build": "umi build",
     "test": "umi test",
-    "pub": "babel ./src/components -d ./lib --copy-files",
+    "pub": "sh ./publish.sh",
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "precommit": "lint-staged",
-    "pub": "sh ./publish.sh"
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "antd": "^3.15.0",
