--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "umi dev",
     "build": "umi build",
     "test": "umi test",
+    "babel": "babel ./src/components -d ./lib --copy-files",
     "pub": "sh ./publish.sh",
     "lint:es": "eslint --ext .js src mock tests",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\"",
